--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,6 +26,7 @@ subjects:
 - !lcsh 'Sabbath'
 - !lcsh 'Seventh-Day Adventists -- Doctrines'
 - !lcc 'BV'
+- GITenberg
 title: The Seventh Day Sabbath, a Perpetual Sign, from the Beginning to the Entering
   into the Gates of the Holy City, According to the Commandment
 url: http://www.gutenberg.org/ebooks/22098
